# megee-sample-lifecycle

./: README.md  app.js  index.html  styles.css
.github/workflows/: megee-cost-system.yml  pages.yml
bdf-materials/: index.html  version.txt
bdf-materials/articles/: 00-bottles-100k.html  01-roi-120wan.html  02-cheap-masterbatch.html  03-yellow-bottles.html  04-what-is-masterbatch.html  index.html
bdf-materials/css/: article.css  style.css
bdf-materials/js/: main.js
megee-cost-system/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
megee-cost-system/app/: __init__.py  api.py  config.py  cost_engine.py  database.py  main.py  models.py  schemas.py
megee-cost-system/app/static/: app.js  index.html  styles.css
megee-cost-system/migrations/: README  env.py
megee-cost-system/migrations/versions/: 2a6b0ff3036f_initial_schema.py  bed61484138c_add_cost_data_approval_workflow.py
megee-cost-system/tests/: conftest.py  test_api.py
